fixed comment overflow

--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -1201,7 +1201,7 @@ footer a {
 }
 /* line 102, ../scss/_view-customer.scss */
 .ckc-panel-footer.is-collapsed {
-  white-space: nowrap;
+  height: 3em;
   overflow: hidden;
   cursor: pointer;
 }
@@ -1220,13 +1220,27 @@ footer a {
   background-image: -o-linear-gradient(left, transparent, #f5f5f5 80%);
   background-image: linear-gradient(left, transparent, #f5f5f5 80%);
 }
+/* line 118, ../scss/_view-customer.scss */
+.ckc-panel-footer.is-collapsed:after {
+  content: '';
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  height: 15px;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, transparent), color-stop(80%, #f5f5f5));
+  background-image: -webkit-linear-gradient(top, transparent, #f5f5f5 80%);
+  background-image: -moz-linear-gradient(top, transparent, #f5f5f5 80%);
+  background-image: -o-linear-gradient(top, transparent, #f5f5f5 80%);
+  background-image: linear-gradient(top, transparent, #f5f5f5 80%);
+}
 
-/* line 124, ../scss/_view-customer.scss */
+/* line 134, ../scss/_view-customer.scss */
 .ckc-panel-group {
   position: relative;
 }
 
-/* line 128, ../scss/_view-customer.scss */
+/* line 138, ../scss/_view-customer.scss */
 .ckc-combination-tools {
   position: absolute;
   left: -22px;
@@ -1242,7 +1256,7 @@ footer a {
   -o-transition: -o-transform 0.3s;
   transition: transform 0.3s;
 }
-/* line 136, ../scss/_view-customer.scss */
+/* line 146, ../scss/_view-customer.scss */
 .ckc-panel-group:hover .ckc-combination-tools, .ckc-combination-tools:hover {
   -webkit-transform: translateX(0px);
   -moz-transform: translateX(0px);
@@ -1251,17 +1265,17 @@ footer a {
   transform: translateX(0px);
 }
 
-/* line 141, ../scss/_view-customer.scss */
+/* line 151, ../scss/_view-customer.scss */
 .ckc-input-group {
   margin-bottom: 10px;
   width: 100%;
 }
-/* line 145, ../scss/_view-customer.scss */
+/* line 155, ../scss/_view-customer.scss */
 .ckc-input-group:last-of-type {
   margin-bottom: 0;
 }
 
-/* line 150, ../scss/_view-customer.scss */
+/* line 160, ../scss/_view-customer.scss */
 .ckc-read-input {
   display: table-cell;
   width: 100%;
@@ -1269,12 +1283,12 @@ footer a {
   float: left;
   text-overflow: clip;
 }
-/* line 157, ../scss/_view-customer.scss */
+/* line 167, ../scss/_view-customer.scss */
 .ckc-read-input[readonly] {
   background-color: #fff !important;
 }
 
-/* line 162, ../scss/_view-customer.scss */
+/* line 172, ../scss/_view-customer.scss */
 .ckc-button-copy {
   position: relative;
   font-size: 0;
