--- a/app/webroot/scss/_view-customer.scss
+++ b/app/webroot/scss/_view-customer.scss
@@ -100,7 +100,7 @@
 	position: relative;
 
 	&.is-collapsed {
-		white-space: nowrap;
+		height: 3em;
 		overflow: hidden;
 		cursor: pointer;
 
@@ -113,6 +113,16 @@
 			bottom: 0;
 			width: 60px;
 			@include background-image(linear-gradient(left, transparent, #f5f5f5 80%));
+		}
+
+		&:after {
+			content: '';
+			position: absolute;
+			right: 0;
+			left: 0;
+			bottom: 0;
+			height: 15px;
+			@include background-image(linear-gradient(top, transparent, #f5f5f5 80%));
 		}
 	}
 
